force-app/main/default/objects/Request_Change_Shift__c/Request_Change_Shift__c.object-meta.xml
<CustomObject>
    <description>digunakan jika agent ingin mengajukan request shift / tukar off</description>
    <label>Tukar Shift &amp; Off</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tukar Shift &amp; Off</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>