force-app/main/default/objects/Request_Change_Shift__c/fields/Cuti_Poin_Karyawan__c.field-meta.xml
<CustomField>
    <fullName>Cuti_Poin_Karyawan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuti &amp; Poin Karyawan</label>
    <referenceTo>Cuti_Poin_Karyawan__c</referenceTo>
    <relationshipLabel>Request Shift</relationshipLabel>
    <relationshipName>Request_Shift</relationshipName>
    <type>Lookup</type>
</CustomField>