force-app/main/default/objects/Request_Change_Shift__c/fields/Jadwal_Akhir_Formula__c.field-meta.xml
<CustomField>
    <fullName>Jadwal_Akhir_Formula__c</fullName>
    <formula>Jadwal_Akhir__r.Name &amp; &quot; &quot; &amp; &quot;/&quot; &amp; &quot; &quot; &amp;  text(Jadwal_Akhir__r.Tanggal__c) &amp; &quot; &quot; &amp; &quot;/&quot; &amp; &quot; &quot; &amp; Jadwal_Akhir__r.Opsi_Jadwal__r.Kode__c &amp; &quot; &quot; &amp; &quot;/&quot; &amp; &quot; &quot; &amp; text(Jadwal_Akhir__r.Lokasi__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jadwal Akhir</label>
    <type>Text</type>
</CustomField>