force-app/main/default/objects/Request_Change_Shift__c/fields/Jadwal_Awal__c.field-meta.xml
<CustomField>
    <fullName>Jadwal_Awal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jadwal Awal</label>
    <referenceTo>Jadwal_Karyawan__c</referenceTo>
    <relationshipName>Pengajuan_Pergantian_Shift</relationshipName>
    <type>Lookup</type>
</CustomField>