force-app/main/default/objects/Request_Change_Shift__c/fields/Lokasi_Shift_Awal__c.field-meta.xml
<CustomField>
    <fullName>Lokasi_Shift_Awal__c</fullName>
    <label>Lokasi Shift Awal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lokasi</valueSetName>
    </valueSet>
</CustomField>