force-app/main/default/objects/Request_Change_Shift__c/fields/Nama_Karyawan_Terkait__c.field-meta.xml
<CustomField>
    <fullName>Nama_Karyawan_Terkait__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nama Karyawan Terkait</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_Change_Shift1</relationshipName>
    <type>Lookup</type>
</CustomField>