force-app/main/default/objects/Request_Change_Shift__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Draf&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draf</fullName>
                <default>true</default>
                <label>Draf</label>
            </value>
            <value>
                <fullName>Menunggu Persetujuan</fullName>
            </value>
            <value>
                <fullName>Diterima</fullName>
            </value>
            <value>
                <fullName>Ditolak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>