force-app/main/default/objects/Request_Change_Shift__c/fields/Tanggal_Shift_Awal__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Shift_Awal__c</fullName>
    <label>Tanggal Shift Awal</label>
    <type>Date</type>
</CustomField>