force-app/main/default/objects/Request_Change_Shift__c/validationRules/ValidateThisMonth.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateThisMonth</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        ISNEW(),
        OR(
            MONTH(Tanggal_Shift_Awal__c) &lt;&gt; MONTH(TODAY()), 
            YEAR(Tanggal_Shift_Awal__c) &lt;&gt; YEAR(TODAY())
        )
    ),
    AND(
        NOT(ISNEW()),
        Tanggal_Shift_Awal__c &gt; DATEVALUE(CreatedDate)
    )
)</errorConditionFormula>
    <errorDisplayField>Tanggal_Shift_Awal__c</errorDisplayField>
    <errorMessage>Shift Awal tidak boleh lebih dari BULAN INI</errorMessage>
</ValidationRule>