force-app/main/default/objects/Request_Change_Shift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nama_Karyawan_Pengaju__c</columns>
    <columns>Nama_Karyawan_Terkait__c</columns>
    <columns>Jadwal_Awal__c</columns>
    <columns>Jadwal_Akhir__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>